[package]
name = "heos-control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "heos_control"
path = "src/app/main.rs"

[lib]
name = "heos"
path = "src/heos/lib.rs"

[dependencies]
ssdp-client = "1.0.0"
tokio = {version = "1", features = ["full"] }
futures = "0.3"
regex = "1.9"
lazy_static = "1.4.0"
telnet = "0.2"
serde_json = "1.0" 